# shuttlings-cch24

./: Cargo.toml  README.md
.sqlx/: query-0ac14b319bc665cff16363930613a78f0814c17883d251f6ba9f1be7aaee3919.json  query-6720a3fa57d2806d1fd860f345593f50793fb48079fde4c66bff58c297b017b7.json  query-6d624b1a54f721c3700798e5b7137d87a539a2d524d8d393ea347a18eba04ae7.json  query-885290f9c9453e79e94d82041ca8b8dbe0237b527286cc8c9bec7238d9d2e8c0.json  query-ceb3376a44a835f462864a0990eceed4540a0a2eea01c95817a9f565fcfad5e2.json
migrations/: 20241219144038_day_19.sql
src/: day1.rs  day_12.rs  day_16.rs  day_19.rs  day_2.rs  day_23.rs  day_5.rs  day_9.rs  lib.rs  main.rs
tests/: day1.rs  day_2.rs  day_5.rs  helper.rs
