[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "3.1.5", features = ["test", "cookie"] }
poem-openapi = { version = "5.1.4", features = ["swagger-ui", "uuid", "chrono"] }
shuttle-poem = "0.49.0"
shuttle-runtime = "0.49.0"
serde = { version = "1.0.215", features = ["derive"] }

# day 5
cargo-manifest = "0.17.0"
serde_yml = "0.0.12"

# day 9
leaky-bucket = "1.1.2"

# day 12
rand = "0.8.5"

# day 16
jsonwebtoken = "9.3.0"
serde_json = "*"

# day 19
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["sqlite", "postgres", "uuid", "chrono"] }
base64 = "0.22.1"

[dev-dependencies]
tokio = "1.41.1"
